Avalara Fullqa/src/OrgChartPlus/objects/ADP_OrgChartEntityCommon__c.object
<CustomObject>
    <description>Global customer contact info</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ADP OrgChart Entity Common</relationshipLabel>
        <relationshipName>ADP_OrgChartEntityCommon</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ADP OrgChart Entity Common</relationshipLabel>
        <relationshipName>ADP_OrgChartEntityCommon</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Influence__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Influence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MatrixText__c</fullName>
        <label>MatrixText</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opinion__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Opinion</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ADP OrgChart Entity Common</label>
    <nameField>
        <displayFormat>OEC-{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ADP OrgChart Entity Common</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>